# assert_approx_eq

./: .appveyor.yml  .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE  LICENSE-APACHE  LICENSE-MIT  README.md  assert_approx_eq.rs
examples/: assert_approx_eq.rs
src/: lib.rs
