[package]
name = "assert_approx_eq"
description = "assert approximately equal"
version = "1.1.0"
authors = ["Ashley Williams <ashley666ashley@gmail.com>"]
repository = "https://github.com/ashleygwilliams/assert_approx_eq.git"
readme = "README.md"
license = "MIT/Apache-2.0"
edition = "2018"

[dependencies]
